--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -1069,7 +1069,7 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <string name="preferences__request_a_delivery_report_for_each_sms_message_you_send">Demander un relevé de transmission pour chaque texto envoyé</string>
   <string name="preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length">Supprimer automatiquement les messages plus anciens dès qu’une conversation dépasse une certaine longueur</string>
   <string name="preferences__delete_old_messages">Supprimer les anciens messages</string>
-  <string name="preferences__chats">Conversations et média</string>
+  <string name="preferences__chats">Conversations et médias</string>
   <string name="preferences__conversation_length_limit">Limite de taille des conversations</string>
   <string name="preferences__trim_all_conversations_now">Réduire toutes les conversations maintenant</string>
   <string name="preferences__scan_through_all_conversations_and_enforce_conversation_length_limits">Analyser toutes les conversations et imposer des limites de longueur de conversation</string>
