--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -547,6 +547,13 @@
     <string name="PassphrasePromptActivity_ok_button_content_description">Submit passphrase</string>
     <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Invalid passphrase!</string>
 
+    <!-- PlacePickerActivity -->
+    <string name="PlacePickerActivity_title">Map</string>
+
+    <string name="PlacePickerActivity_not_a_valid_address">Not a valid Address</string>
+    <string name="PlacePickerActivity_drop_pin">Drop pin</string>
+    <string name="PlacePickerActivity_accept_address">Accept address</string>
+
     <!-- PlayServicesProblemFragment -->
     <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">The version of Google Play Services you have installed is not functioning correctly.  Please reinstall Google Play Services and try again.</string>
 
